- Fixed bug where event duplicated on recurring events with exceptions
- Improved etag values for caldav everywhere

17-06-2015 6.1.41
- Improved etag values for caldav
- Removed funambol all day flag as it causes problems with thunderbird all day event changes
- Set project field when creating linked invoice from project
- Applied new task colors to links and start page as well
- Sieve: Fixed index problem with sieve rules

15-06-2015 6.1.40
- Updated Czech and German translations
- Billing: Added tax_code display to the tax column in the items grid
- namespace problem in ttf fonts for tcpdf
- Sieve: Fixed sieve out of office problem with multiple aliases.
- Sieve: Move the "Out of office" rule always to the end of the sieve file.

10-06-2015 6.1.39
- Email: fixed importing VCards in Email attachment
- Calendar: Undo the recurrence not correct exception because it causes the calendar for not being loaded at all.
- Tasks: Fixed loading problem of the tasks grid. (Sometimes the loadingmask kept hanging)
- Email: Composer will reload signature without full reload
- Email: Labels context menu will change when Labels are changed without full reload
- Sieve: Removed "Stop" from default "Out of office" rule
- Billing Order item description field autocompletes the description of a product as well

05-06-2015 6.1.38
- text attachments displayed inline only when no disposition=attachment is present
- Sieve: Updated German language
- Billing: Items Grid: Disabled "getEditorParent" because of problem with Chrome browsers for not being able to open the texeditor anymore
- Duplicating a project saved to soon, causing validation errors with unique custom fields
- Projects2 analyzer: ACL permissions would cause total time entry duration values to multiply
- Fixed isImage detection for uppercase extensions
- Projects2: Added invoiceable option for project income. With exclamation mark in grid
- Set combobox text in contact field on the Schedule call dialog